# brain

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LAYER1_PLAN.md  LAYER2_PLAN.md  LAYER3_PLAN.md  LAYER4_PLAN.md  README.md  pyproject.toml
scripts/: demo_layer1.py  demo_layer2.py  demo_layer3.py  eval_locomo.py
src/brain/: __init__.py  config.py  embeddings.py  extract.py  llm.py  mcp_server.py  memory.py  models.py  reconcile.py  retrieval.py  temporal.py
src/brain/store/: __init__.py  base.py  schema.sql  sqlite.py
src/brain/store/migrations/: 0002_sessions_turns.sql  0003_provenance.sql  0004_fts_memories.sql  0005_event_dates.sql
tests/: conftest.py  test_deepseek_llm.py  test_eval_locomo.py  test_extract.py  test_ingest.py  test_mcp.py  test_migrations.py  test_reconcile.py  test_retrieval.py  test_store.py  test_temporal.py
tests/fixtures/conversations/: conv_01.json  pizza_to_sushi.json
tests/fixtures/llm_responses/: extract_conv_01.json  reconcile_pizza_sushi.json
